crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-ivf-invalid-nprobe.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-ivf-invalid-nprobe"
description="Synthetic IvfInvalidNProbe shape."
dim=8 m=16 ef_construction=200 ef_search=50 metric=L2 quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=0 dim=8 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=IvfInvalidNProbe
error.induction_kind=synthetic
error.rendered=IvfInvalidNProbe{n_probe=17, k_coarse=16}
