crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-max-layer-exceeds-cap.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-max-layer-exceeds-cap"
description="MaxLayerExceedsCap from a direct HNSW insertion."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=0 dim=4 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=MaxLayerExceedsCap
error.induction_kind=api
error.rendered=MaxLayerExceedsCap{observed=33, cap=32}
