crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-operation-delete-not-supported.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-operation-delete-not-supported"
description="OperationNotSupportedYet from reserved Delete op."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=1 dim=4 entry_point=idx0 max_layer=0
node_head=[n1:L0:[0]]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=OperationNotSupportedYet
error.induction_kind=api
error.rendered=OperationNotSupportedYet{op=Delete, node_id=n1, brief="future"}
